--- a/CycleAlarmApp/CycleAlarmApp.Android/CycleAlarmApp.Android.csproj
+++ b/CycleAlarmApp/CycleAlarmApp.Android/CycleAlarmApp.Android.csproj
@@ -7,8 +7,8 @@
     <ProjectTypeGuids>{EFBA0AD7-5A72-4C68-AF49-83D382785DCF};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <TemplateGuid>{c9e5eea5-ca05-42a1-839b-61506e0a37df}</TemplateGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>CycleAlarmApp.Droid</RootNamespace>
-    <AssemblyName>CycleAlarmApp.Android</AssemblyName>
+    <RootNamespace>BLINK.Droid</RootNamespace>
+    <AssemblyName>BLINK.Android</AssemblyName>
     <Deterministic>True</Deterministic>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
@@ -33,6 +33,17 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
+    <AndroidPackageFormat>apk</AndroidPackageFormat>
+    <MandroidI18n />
+    <AndroidKeyStore>true</AndroidKeyStore>
+    <AndroidSigningKeyStore>C:\Users\abc16\Desktop\blink.keystore</AndroidSigningKeyStore>
+    <AndroidSigningStorePass>qhofr12!</AndroidSigningStorePass>
+    <AndroidSigningKeyAlias>blink</AndroidSigningKeyAlias>
+    <AndroidSigningKeyPass>qhofr12!</AndroidSigningKeyPass>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -54,14 +65,18 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.6.0.1141" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1534" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
+    <PackageReference Include="Xamarin.Forms.Maps">
+      <Version>4.8.0.1534</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controller\BluetoothState.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="Controller\Sensors.cs" />
     <Compile Include="Controller\Bluetooth.cs" />
+    <Compile Include="Controller\Settings.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -90,13 +105,16 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Resources\drawable\" />
+    <AndroidResource Include="Resources\drawable\background.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\CycleAlarmApp\CycleAlarmApp.csproj">
       <Project>{B18D0DB4-5214-4082-9052-B0E82A92C9DD}</Project>
       <Name>CycleAlarmApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
