--- a/CycleAlarmApp/CycleAlarmApp/CycleAlarmApp.csproj
+++ b/CycleAlarmApp/CycleAlarmApp/CycleAlarmApp.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <ProduceReferenceAssembly>true</ProduceReferenceAssembly>
+    <PackageId>BLINK</PackageId>
+    <Authors>BLINK</Authors>
+    <Product>BLINK</Product>
+    <AssemblyName>BLINK</AssemblyName>
+    <RootNamespace>BLINK</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -11,8 +16,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="4.5.0.495" />
+    <PackageReference Include="Xamarin.Forms" Version="4.8.0.1534" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="4.8.0.1534" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +28,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Update="Page\LoadingPage.xaml.cs">
+      <DependentUpon>LoadingPage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Page\SettingPage.xaml.cs">
       <DependentUpon>SettingPage.xaml</DependentUpon>
     </Compile>
@@ -29,6 +38,9 @@
 
   <ItemGroup>
     <EmbeddedResource Update="BluetoothControllerDetail.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Page\LoadingPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Page\MenuPage.xaml">
