--- a/CycleAlarmApp/CycleAlarmApp.Android/CycleAlarmApp.Android.csproj
+++ b/CycleAlarmApp/CycleAlarmApp.Android/CycleAlarmApp.Android.csproj
@@ -37,13 +37,16 @@
     <EnableLLVM>false</EnableLLVM>
     <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
     <BundleAssemblies>false</BundleAssemblies>
-    <AndroidPackageFormat>apk</AndroidPackageFormat>
     <MandroidI18n />
     <AndroidKeyStore>true</AndroidKeyStore>
-    <AndroidSigningKeyStore>C:\Users\abc16\Desktop\blink.keystore</AndroidSigningKeyStore>
+    <AndroidSigningKeyStore>C:\Users\user\Desktop\11\blink.keystore</AndroidSigningKeyStore>
     <AndroidSigningStorePass>qhofr12!</AndroidSigningStorePass>
-    <AndroidSigningKeyAlias>blink</AndroidSigningKeyAlias>
+    <AndroidSigningKeyAlias>BLINK.alias</AndroidSigningKeyAlias>
     <AndroidSigningKeyPass>qhofr12!</AndroidSigningKeyPass>
+    <AndroidEnableMultiDex>true</AndroidEnableMultiDex>
+    <AndroidDexTool>d8</AndroidDexTool>
+    <AndroidUseAapt2>true</AndroidUseAapt2>
+    <AndroidCreatePackagePerAbi>false</AndroidCreatePackagePerAbi>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -54,6 +57,10 @@
     <WarningLevel>4</WarningLevel>
     <AndroidManagedSymbols>true</AndroidManagedSymbols>
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
+    <AotAssemblies>false</AotAssemblies>
+    <EnableLLVM>false</EnableLLVM>
+    <AndroidEnableProfiledAot>false</AndroidEnableProfiledAot>
+    <BundleAssemblies>false</BundleAssemblies>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Mono.Android" />
